fix: minimize gap

--- a/src/components/about-me/AboutMe.scss
+++ b/src/components/about-me/AboutMe.scss
@@ -42,7 +42,7 @@
 
     @include smallMobile {
       grid-template-columns: auto;
-      row-gap: 40px;
+      row-gap: 20px;
 
       .ol-button {
         text-align: center;
